--- a/index.html
+++ b/index.html
@@ -18,4 +18,10 @@
   <body>
     <!-- quasar:entry-point -->
   </body>
+
+  <script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdET7XV-zFwBQff-l0RRl7Y1n-Ii4gJd4&libraries=places"
+  async
+  defer
+></script>
 </html>
