--- a/index.html
+++ b/index.html
@@ -19,9 +19,5 @@
     <!-- quasar:entry-point -->
   </body>
 
-  <script
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdET7XV-zFwBQff-l0RRl7Y1n-Ii4gJd4&libraries=places"
-  async
-  defer
-></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdET7XV-zFwBQff-l0RRl7Y1n-Ii4gJd4&libraries=places&v=beta&loading=async"></script>
 </html>
