--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   </head>
   <body>
     <!-- quasar:entry-point -->
+     <!--AIzaSyBdET7XV-zFwBQff-l0RRl7Y1n-Ii4gJd4-->
+
   </body>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdET7XV-zFwBQff-l0RRl7Y1n-Ii4gJd4&libraries=places&v=beta&loading=async"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7NL9oNrApHfBlz1YL52_QoHcJYDvpHGQ&libraries=places&v=beta&loading=async"></script>
 </html>
